--- a/src/app/modules/composer/components/popup/attachment-error/attachment-error.component.html
+++ b/src/app/modules/composer/components/popup/attachment-error/attachment-error.component.html
@@ -15,9 +15,9 @@
       <ng-container i18n="unit of time|@@COMMON__MINUTES">minutes</ng-container>
     </p>
     <p>
-      <ng-container i18n="@@COMPOSER_ATTACHMENT_ERROR__MAX_DURATION_UPGRADE"
-        >Upgrade to Minds+ or Minds Pro to upload videos up to </ng-container
-      >{{ error.maxLengthPlus / 60 }}
+      <a routerLink="/plus" target="_blank">Upgrade to Minds+</a> or
+      <a routerLink="/pro" target="_blank">Minds Pro</a> to upload videos up to
+      {{ error.maxLengthPlus / 60 }}
       <ng-container i18n="unit of time|@@COMMON__MINUTES">minutes</ng-container>
     </p>
   </ng-template>
