Add approximate counter to posts

--- a/src/app/modules/admin/firehose/firehose.component.html
+++ b/src/app/modules/admin/firehose/firehose.component.html
@@ -26,7 +26,7 @@
             class="m-firehose__tagSubmitButton"
             (click)="addTag()"
             [size]="'xsmall'"
-            >Submit</m-button
+            >Submit (~{{ count }})</m-button
           >
           <span
             class="m-firehose__tag"
