--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -343,6 +343,30 @@
       </li>
 
       <li
+        class="m-sidebarNavigation__item"
+        [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        [routerLinkActiveOptions]="{ exact: plusPageActive }"
+      >
+        <a routerLink="/governance" (click)="toggle()">
+          <m-tooltip
+            [enabled]="!showLabels"
+            [anchor]="'left'"
+            [useParentPosition]="true"
+          >
+            <m-icon iconId="gavel" m-tooltip--icon></m-icon>
+            <ng-container>Governance</ng-container>
+          </m-tooltip>
+
+          <span
+            class="m-sidebarNavigationItem__text"
+            i18n="@@COMMON__DISCOVERY"
+          >
+            Governance
+          </span>
+        </a>
+      </li>
+
+      <li
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
         class="m-sidebarNavigation__item"
       >
