Prevent plus feed crash with malformed post support tiers #4928

--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
@@ -70,7 +70,7 @@
           <ng-container *ngIf="!isPlus">
             <ng-container i18n="@@WIRE__SUPPORT__TIER__TEXT" *ngIf="!isCustom">
               Join @{{ entity.ownerObj.username }}'s
-              {{ entity.wire_threshold.support_tier.name }}
+              {{ entity.wire_threshold.support_tier?.name }}
               Membership to see this post
             </ng-container>
             <ng-container i18n="@@WIRE__SUPPORT__TIER__TEXT" *ngIf="isCustom">
