feat: snapshot integration - fetch proposals

--- a/src/app/modules/governance/card/card.component.html
+++ b/src/app/modules/governance/card/card.component.html
@@ -1,10 +1,10 @@
 <div class="m-governance__card-container">
   <div class="m-application-meta">
     <h2 class="m-user">
-      {{ card.title }}
+      {{ proposal.title }}
     </h2>
     <div class="m-governance__card-status">
-      {{ card.status }}
+      {{ proposal.state }}
     </div>
   </div>
   <div class="m-governance__card-arrow-container">
