Update recovery code text

--- a/src/app/modules/auth/multi-factor-auth/panels/recovery-code/recovery-code.component.html
+++ b/src/app/modules/auth/multi-factor-auth/panels/recovery-code/recovery-code.component.html
@@ -11,7 +11,7 @@
     (ngModelChange)="onCodeChange($event)"
     class="m-mfaAuth__codeInput"
     type="text"
-    placeholder="6 digit code"
+    placeholder="Enter your recovery code"
   />
 </div>
 
