--- a/src/app/modules/boost/modal/inputs/amount-input/amount-input.component.html
+++ b/src/app/modules/boost/modal/inputs/amount-input/amount-input.component.html
@@ -37,6 +37,7 @@
       formControlName="tokens"
       min="1"
       value="1"
+      step="0.01"
       data-cy="data-minds-boost-modal-tokens-input"
     />
   </div>
