--- a/src/app/modules/governance/proposal-list/proposal-list.component.scss
+++ b/src/app/modules/governance/proposal-list/proposal-list.component.scss
@@ -15,6 +15,8 @@
     margin-bottom: 18px;
     padding-right: 0;
     padding-left: 0;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .m-governance-button {
