infinite scroll integrated and proposals filter

--- a/src/app/modules/governance/enacted/enacted.component.html
+++ b/src/app/modules/governance/enacted/enacted.component.html
@@ -1,7 +1,12 @@
-<m-loadingSpinner [inProgress]="inProgress$ | async"> </m-loadingSpinner>
-
 <m-proposal-list
   *ngIf="!(inProgress$ | async)"
   [proposals]="proposals$ | async"
-  [total]="totalProposals$ | async"
 ></m-proposal-list>
+
+<infinite-scroll
+  distance="25%"
+  (load)="load()"
+  [moreData]="hasMoreData$ | async"
+  [inProgress]="inProgress$ | async"
+>
+</infinite-scroll>
