--- a/src/stylesheets/components/components.scss
+++ b/src/stylesheets/components/components.scss
@@ -771,3 +771,34 @@ m-text-input--autocomplete-menu {
     }
   }
 }
+
+popper-content {
+  .ngxp__container {
+    max-width: 350px;
+    min-width: 350px;
+    border-radius: $m-borderRadius;
+    padding: 0;
+    @include z-index(tooltip);
+
+    @include m-theme() {
+      color: themed($m-textColor--primary);
+      background: themed($m-bgColor--primary);
+      border: 1px solid themed($m-borderColor--primary);
+    }
+    box-shadow: none;
+  }
+
+  .ngxp__arrow:before {
+    height: 10px;
+    width: 10px;
+    @include m-theme() {
+      background: themed($m-bgColor--primary);
+      border: 1px solid themed($m-borderColor--primary);
+    }
+  }
+  .ngxp__inner {
+    @include m-theme() {
+      background: themed($m-bgColor--primary);
+    }
+  }
+}
